--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 
-MONGODB_URI=mongodb://localhost:27017/
+MONGODB_URI=mongodb+srv://soumyajha0501:J7fZutf6cVGgx78O@cluster0.743d2.mongodb.net/
 JWT_SECRET=XLfiwsKtgq
+PORT=5001
